# megatron-controls

./: LICENSE  README.md  noxfile.py  pyproject.toml
docs/source/: conf.py  index.md
src/megatron_controls/: __init__.py  context.py  exceptions.py  interpreter.py  logger.py  megatron_control.py  motor_control.py  support.py
tests/: test_package.py
